Wed Nov 20 12:39:57 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_back.adb: Use SLOC to print a more usefull error message.

	* xe_parse.adb: Check in P_Configuration_End that the
	configuration name is known before checking that it matches.

	* xe_stubs.adb: Create_Main_Unit rebuilds the partition main
	subprogram when Most_Recent_Stamp is more recent than the current
	partition main subprogram file stamp.

Fri Nov  8 16:35:19 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_check.adb: Check that partition name does not conflict with
 	any other ada units (not present in the configuration file).
	

	* xe_parse.adb, xe.ads, xe.adb: Add some stuff to store SLOC on a
	GNATDIST node.

Tue Oct 22 10:24:14 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Changed gnatmake into ${GNATMAKE} to allow gnatmake
	  redefinition (for example: make GNATMAKE="gnatmake -j2")

Fri Oct 18 14:09:23 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe.ads, xe_stubs.adb, xe_back.adb, xe_parse.adb: Add pragma
 	Version (Checks => [False | True])

Mon Oct  7 13:30:30 1996  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_stubs.adb, xe.adb, xe.ads: Fix some problems with child units
	and file naming (a.b was translated in to a.b.adb rather than
	a-b.adb). There are still problems due to a.b'version.

Mon Sep 30 11:43:01 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb, xe_utils.adb: Use configuration name as partition
 	main subprogram. File stamp checking has been a little bit
 	improved.

Sun Sep 29 18:33:58 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_utils.adb: Later has been changed to More_Recent.

Mon Sep 23 18:23:05 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe.adb: Get_Host, Get_Command_Line, Get_Absolute_Exec,
	Get_Relative_Exec and Get_Main_Subprogram return default values
	when no specific value has been specified.

Wed Sep 11 19:26:16 1996  Samuel Tardieu  <sam@inf.enst.fr>
